Action items icon alignment fixed for small screen

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -266,14 +266,18 @@ section {
 }
 
 .action-items img{
-  width: 70px;
+  width: 3.5rem;
   display: inline-block;
   margin-right: 1em;
   float: left;
 }
 
 .action-items h2 {
-  padding: 0.5em;
+  padding: 0.75rem;
+}
+
+.action-items h4 {
+  clear: left;
 }
 
 .action-items:nth-child(even) {
